--- a/src/main/resources/com/project/app/fxml/contents/addnewpenawaran.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/addnewpenawaran.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.Label?>
 <AnchorPane prefHeight="1000.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.com.project.app.controller.AddNewPenawaranController">
    <children>
       <VBox layoutX="255.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -96,15 +97,31 @@
                               </Text>
                            </children>
                         </HBox>
-                        <ScrollPane prefHeight="842.0" prefWidth="1070.0" style="-fx-border-width: 1 0 0 0; -fx-border-color: #c8c8c8; -fx-background-color: transparent;">
-                          <content>
-                              <VBox fx:id="vboxDetail" spacing="10.0">
-                                  <padding>
-                                      <Insets top="20.0" right="20.0" bottom="20.0" left="20.0"/>
-                                  </padding>
-                              </VBox>
-                          </content>
-                        </ScrollPane>
+                         <ScrollPane
+                                     fitToWidth="true"
+                                     prefHeight="842.0"
+                                     prefWidth="1070.0"
+                                     style="-fx-border-width: 1 0 0 0; -fx-border-color: #c8c8c8; -fx-background-color: transparent;"
+                                     AnchorPane.leftAnchor="0.0"
+                                     AnchorPane.rightAnchor="0.0"
+                                     AnchorPane.topAnchor="0.0"
+                                     AnchorPane.bottomAnchor="0.0">
+                             <content>
+                                 <VBox fx:id="vboxDetail" spacing="16.0"
+                                       AnchorPane.leftAnchor="0.0"
+                                       AnchorPane.rightAnchor="0.0">
+
+                                     <padding>
+                                         <Insets top="20.0" right="20.0" bottom="20.0" left="20.0"/>
+                                     </padding>
+
+                                     <!-- Placeholder ketika belum ada pekerjaan -->
+                                     <Label fx:id="lblEmpty" text="📄 Surat belum memiliki rincian pekerjaan / komponen"
+                                            visible="false" managed="false"
+                                            style="-fx-font-size: 15; -fx-text-fill: #777; -fx-font-style: italic;"/>
+                                 </VBox>
+                             </content>
+                         </ScrollPane>
                      </children>
                   </VBox>
                </children>
