--- a/src/main/resources/com/project/app/fxml/contents/home.fxml
+++ b/src/main/resources/com/project/app/fxml/contents/home.fxml
@@ -308,7 +308,7 @@
                                              <children>
                                                 <ImageView fitHeight="150.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
-                                                      <Image url="@../../images/belum%20bayar.png" />
+                                                      <Image url="@../../images/belumbayar.png" />
                                                    </image>
                                                 </ImageView>
                                                 <Text fill="#838383" strokeType="OUTSIDE" strokeWidth="0.0" text="Belum Dibayar :">
